--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate", 
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:prettier",
     "lintfix": "prettier --write --list-different .",
-    "test": "jest"
+    "test": "jest",
+    "stag": "cross-env NODE_ENV=staging  nuxt",
+    "stag:build": "cross-env NODE_ENV=staging  nuxt build",
+    "prod": "cross-env NODE_ENV=production  nuxt",
+    "prod:build": "cross-env NODE_ENV=production  nuxt build"
   },
   "dependencies": {
-    "swiper": "^5.4.5",
-    "vue-awesome-swiper": "^4.1.1",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "cross-env": "^7.0.3",
     "nuxt": "^2.15.8",
+    "swiper": "^5.4.5",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
